style.css
/* General Crap */

body{
    margin: 0px;
    padding: 0px;
    background-color: #121212;
    font-family: 'Open Sans', sans-serif;
}

h1, h2, h3, p {
    margin: 0;
    padding: 1em 0;
}

p{
    line-height: 30px;
}


/* Header Section */

/* Showcase */

#showcase{
    height: 100vh;
    min-height: 700px;
    width: 100%;
    
    padding-bottom: 200px;
    
    z-index: -1;
    letter-spacing: 1px;
    text-align: center;
    color: whitesmoke;
}

#showcase .content-wrap{
    width: 800px;
    margin: 20px auto;
    position: absolute;
    top: 300px;
    right: 0;
    left: 0;
}


#heading-wrap{
    transform: rotate3d(1,0,0,90deg);
    transition: 1s;
}

#showcase h1, #showcase h2{
    display: inline-block;
    padding: .25em;
    font-weight: 300;
    opacity: .75;
}

.z-test{
    z-index: 10;
}

#showcase h1{
    font-size: 3.45em;
}

#showcase h2{
    font-size: 2.76em;
}

#showcase hr{
    width: 20%;
    max-width: 500px;
    background-color: whitesmoke;
    opacity: .55;
    height: 4px;
    border: none;
    border-radius: 33%;
    transition: 2s;
}

/* Color Grid Container */

.color-grid-container{
    height: calc(75vh + 10vw);
    min-height: 500px;
    max-height: 90vh;
    
    position: absolute;
    top: 50px;
    left: 0;
    right: 0;
    
    display: grid;
    align-items: center;
    margin: 0 auto;
    
    grid-row-gap: 0px;
    grid-template-columns: 1fr 1fr 1fr 12fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1.15fr 1.3fr 1.15fr 1fr;
    opacity: 1;
    
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;   
}

/* Setting up rows and columns for the Color Grid */

.color-grid-container .row{
    width: 100%;
    height: 100%;
}

.color-grid-container #row-three{
    grid-row-start: 3;
    grid-row-end: 4;
    
    grid-column-start: 1;
    grid-column-end: 8;
}

.color-grid-container #row-one{
    grid-row-start: 1;
    grid-row-end: 2;
    
    grid-column-start: 3;
    grid-column-end: 6;
}

.color-grid-container #row-two{
    grid-row-start: 2;
    grid-row-end: 3;
    
    grid-column-start: 2;
    grid-column-end: 7;
}

.color-grid-container #row-four{
    grid-row-start: 4;
    grid-row-end: 5;
    
    grid-column-start: 2;
    grid-column-end: 7;
}

.color-grid-container #row-five{
    grid-row-start: 5;
    grid-row-end: 6;
    
    grid-column-start: 3;
    grid-column-end: 6;
}



/* Setting up cells in the Color Grid */

.cell{
    border: solid black 0.1px;
    opacity: .6;
    border-radius: 15px;
    filter: blur(75px) saturate(115%);
    transition: 4s;
/*     animation-name: blurAnimation;
    animation-duration: 6s;
    animation-iteration-count: 1; */
}



/* @keyframes blurAnimation{
    from{
        filter: saturate(1.5px);
        filter: blur(100px);
    } to{
        filter: saturate(1.5px);
        filter: blur(00px);
    }
    to{
        filter: saturate(1.5px);
        filter: blur(20px);
    }
} */

#row-one, #row-two, #row-three, #row-four, #row-five{
    display: inline-grid;
    grid-template-rows: auto;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    justify-content: center;
}

#row-one  div, #row-two  div, #row-three  div, #row-four  div, #row-five  div {
    margin: auto;
    padding: 6%;
}


/* Setting up sizes for the cells */

#row-one .cell, #row-five .cell{
    width: calc(52px * 1.5);
    height: calc(48px * 1.5);
}

#row-three .cell{
    width: calc(52px * 1.75);
    height: calc(48px * 1.75);
}

#row-two .cell, #row-four .cell{
    width: calc(52px * 1.55);
    height: calc(48px * 1.55);
}




/* Setting up colors for each individual cell */

/* Row One */

#row-one #one{
    background-color: #b53333;
}

#row-one #two{
    background-color: #b56033;
}

#row-one #three{
    background-color: #b59433;
}

#row-one #four{
    background-color: #b2b533;
}

/* Row Two */

#row-two #one{
    background-color: #94b533;
}

#row-two #two{
    background-color: #74b533;
}

#row-two #three{
    background-color: #33b537;
}

#row-two #four{
    background-color: #33b54c;
}

/* Row Three */

#row-three #one{
    background-color: #33b576;
}

#row-three #two{
    background-color: #33b5ac;
}

#row-three #three{
    background-color: #3399b5;
}

#row-three #four{
    background-color: #336ab5;
}

/* Row Four */
#row-four #one{
    background-color: #3733b5;
}

#row-four #two{
    background-color: #5633b5;
}

#row-four #three{
    background-color: #7a33b5;
}

#row-four #four{
    background-color: #9b33b5;
}

/* Row Five */

#row-five #one{
    background-color: #b53397;
}

#row-five #two{
    background-color: #b53373;
}

#row-five #three{
    background-color: #b53369;
}

#row-five #four{
    background-color: #b5334e;
}


/* Main Section */

nav{
    width: calc(550px + 20vw);
    height: 60px;
    position: sticky;
    top: 0;
    margin: auto;
    background-color: rgba(242, 243, 244, .9);
    z-index: 100;
    opacity: 0;
    border-bottom-left-radius: 100px;
    border-bottom-right-radius: 100px;
    text-align: center;
    border-bottom: #30ac9a solid 4px;
    transform: scale(.5);
    transition: .65s;
    filter: grayscale(100%) blur(100px);
    /*background-image: url(asset-a980580fb72a96faa711727172cbd0d4.png);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-color: rgba(255, 255, 255, .025);*/
}

nav *{
    font-size: 30px;
    position: relative;
    top: 0;
    margin: 0 15px;
    text-align: center;
    text-decoration: none;
    color: #141414;
    transition: .1s linear;
    margin-top: 12px;
}

.navbar-text{
    font-size: 14px;
    font-family: 'Open Sans', sans-serif;
    opacity: 0;
}

/*
nav a:hover, nav a:hover i{ 
    color: #30ac9a;
    transform: skewY(-6deg) skewX(8deg) translateY(-9px);
    font-size: 32px;
}
*/

/*
nav a:hover .navbar-text{
    font-size: 18px;
    color: #303030;
    opacity: 1;
    transform: translateY(10px);
}
/* ... */

